style.css
html {
  box-sizing: border-box;
}
body {
  overflow-y: hidden;
  padding: 0;
  padding-bottom: 60px;
  margin: 0;
  font-family: roboto;
  font-size: 18px;
  background: #e5e5e5;
  color: #404040;
  font-weight: 400;
}
.weight-thin {
  font-weight: 100;
}
.weight-regular {
  font-weight: 400;
}
weight-medium {
  font-weight: 500;
}
.weight-bold {
  font-weight: 700;
}
.important-strong {
  font-weight: 900;
}
.decorstion-underline {
  text-decoration: underline;
}
.style-italic {
  font-style: italic;
}
.container {
  width: 100%;
}
.menu-nav {
  min-width: 100%;
  min-height: 50px;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  background-color: rgba(64, 64, 64, 0.9);
  backdrop-filter: blur(2.5px);
  -webkit-backdrop-filter: blur(2.5px);
  -webkit-box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 0.7);
  -moz-box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
  box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 1);
}
.menu-link {
  text-decoration: none;
  color: lightgrey;
  display: flex;
  gap: 10px;
  height: 50px;
  align-items: center;
  white-space: nowrap;
  cursor: pointer;
}
.loader {
  width: 80px;
  left: 50vw;
  top: 50vh;
  position: fixed;
  user-select: none;
  pointer-events: none;
  transition: all 0.35s ease-in-out;
}
.menu-ul {
  display: flex;
  gap: 36px;
  margin: 0 24px;
}
.footer {
  white-space: nowrap;
  color: darkgray;
  min-width: 100%;

  position: fixed;
  z-index: 998;
  bottom: 0;
  left: 0;
  background-color: rgba(64, 64, 64, 0.9);
  backdrop-filter: blur(2.5px);
  -webkit-box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 0.7);
  -moz-box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 1);
  box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 1);
}

.footer-nav .menu-link {
  text-decoration: none;
  color: lightgrey;
  display: flex;
  height: 50px;
  align-items: center;
  white-space: nowrap;
}
.footer-nav .menu-ul {
  display: flex;
  gap: 48px;
  margin-left: 24px;
}
.supportme-checkbox {
  display: none;
}
.supportme-arrow {
  width: 15px;
}
.fa-angle-down {
  transition: all 0.18s ease-in-out;
}
nav:has(#supportme-checkbox:checked) .supportme-arrow {
  transition: all 0.18s ease-in-out;
  transform: rotate(180deg);
}
.supportme-more {
  opacity: 0;
  pointer-events: none;
  padding: 0 5px;
  z-index: 999;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 50px;
  left: 200px;
  backdrop-filter: blur(2.5px);
  -webkit-backdrop-filter: blur(2.5px);
  background-color: rgba(64, 64, 64, 0.9);
  -webkit-box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 1);
  -moz-box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 1);
  box-shadow: 8px -8px 24px 0px rgba(0, 0, 0, 1);
  border-radius: 0 0 5px 5px;
  transition: all 0.18s ease-in-out;
}
#supportme-checkbox:checked ~ .supportme-more {
  opacity: 1;
  pointer-events: all;
}

.supportme-more .color-foundation {
  text-shadow:
    -1px -1px 0 rgba(211, 211, 211, 0.5),
    1px -1px 0 rgba(211, 211, 211, 0.5),
    -1px 1px 0 rgba(211, 211, 211, 0.5),
    1px 1px 0 rgba(211, 211, 211, 0.5);
}
.header {
  transition: opacity 700ms;
  width: 100%;
  height: calc(100vw * 1.34375);
  background-image: url(media/header-pc.webp);
  /* Height of headers photo must be divided (podzielić) by width of headers photo. Solution of this divided should be mindfully (pomnożyć) by 100vw. Solution is a height of header:*/
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.btns-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.btn-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
}
.btn-container:nth-of-type(2) {
  margin-right: 40px;
}
.krs-btn {
  cursor: pointer;
  border: 5px solid #ee7202;
  color: #ee7202;
  text-decoration: none;
  border-radius: 9px;
  transition-duration: 700ms;
}
.krs-btn:hover {
  background-color: #ee7202;
}
.foundation-btn {
  padding: 8px 5px;
  cursor: pointer;
  display: flex;
  gap: 5px;
  align-items: center;
  border: 5px solid #00539f;
  color: #00539f;
  font-weight: 600;
  text-decoration: none;
  border-radius: 9px;
  transition-duration: 1s;
}
.foundation-btn:hover {
  background-color: #00539f;
}
.main {
  transition: opacity 1s;
}
.content {
  width: calc(100% - 50px);
  min-height: 200vh;
  padding-left: 50px;
  padding-top: 60px;
}
.krs-content {
  padding-left: 30px;
  border-left: 20px solid #ee7202;
  min-height: calc(100vh - 60px);
}
.foundation-content {
  padding-left: 30px;
  border-left: 20px solid #00539f;
  min-height: calc(100vh - 60px);
}
.title-h1 {
  font-size: 36px;
  font-weight: 700;
  color: #404040;
  margin-bottom: 70px;
}
.article-h2 {
  text-align: center;
  font-size: 28px;
  font-weight: 900;
  margin: 50px 0;
}

.supportme-supportme-h2 {
  margin-top: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  margin-bottom: 40vh;
}
.article-h3_solo {
  text-align: center;
  font-weight: 700;
  margin: 15px 0;
}
.article-h3_group {
  text-align: center;
  font-weight: 700;
  margin: 30px 0;
}
.article-h4 {
  text-align: center;
  font-weight: 500;
  margin: 15px 0;
}
.supportme-information {
  margin-top: 20px;
}
.color-krs {
  color: #ee7202;
}
.color-foundation {
  color: #00539f;
}
.error404-title {
  margin-left: 50px;
  font-size: 36px;
  font-weight: 700;
  color: red;
  margin-bottom: 70px;
}
.hugeArticle {
  text-align: center;
}
.hugeArticle .paragraph {
  margin: 15px 0;
  margin-right: 50px;
  text-align: justify;
  font-family: "Roboto Serif";
  font-size: 16.5px;
}
.error404-img {
  display: flex;
  width: 55vw;
  border-radius: 5%;
  margin: 15px auto;
}
.error404-content {
  width: 100%;
  padding-left: 0;
}
.article-photo {
  width: 55vw;
  border-radius: 62px;
}
.error404-text {
  width: 65%;
  display: flex;
  justify-content: center;
  margin: 15px auto;
  flex-wrap: wrap;
}
.footer-ul {
  height: 50px;
  list-style-type: none;
  align-items: center;
  margin: 0 32px;
  gap: 32px;
  display: flex;
}
.technology_html5 {
  color: #f47933;
}
.technology_css3 {
  color: #039be5;
}
.technology_js {
  color: #f4e11e;
}
.technology_github {
  color: #fff;
}
.credits {
  display: flex;
  align-items: center;
  color: #fff;
  margin-left: auto;
}
.contact {
  display: flex;
  gap: 16px;
  margin-left: 16px;
}
.contact-icon {
  color: #fff;
  font-size: 28px;
  display: flex;
  height: 50px;
  align-items: center;
}
a.contact-icon {
  text-decoration: none;
}
.invisible {
  opacity: 0;
  pointer-events: none;
}

